tests/negative/test_if_cond_not_bool.orb
fnc main() () {
    let (x:i32 100);
    if x {};
};